# 2D-Cloth-Simulation-using-the-Mass-Spring-Damping-Approach

./: .gitignore  CMakeLists.txt  README.md
include/: Cloth.h  Mass.h  NGLScene.h  Simulation.h  Spring.h  TimeIntegrator.h
shaders/: Mass-SpringFragment.glsl  Mass-SpringVertex.glsl
src/: Cloth.cpp  Mass.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  Simulation.cpp  Spring.cpp  TimeIntegrator.cpp
tests/: ClothTest.cpp  MassTest.cpp  ParticleTest.cpp  SpringTest.cpp
